entry 파일을 직관적으로 분류하기 위해 controllers 디렉토리에 재배치

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "develop-training-11-signup",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "/controllers/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
